--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -13,6 +13,12 @@ a:visited {
     text-underline-offset: 0; /* to have the same style on both Chrome and Firefox */
 }
 
+a:hover:not(.nav-item),
+a:focus:not(.nav-item) {
+    color: variables.$button-background-hover;
+    text-decoration: rgba(46 143 107 / 100%) underline;
+}
+
 .tippy-box {
     box-shadow: 2px 2px 3px rgba(51 51 51 / 46%);
 
@@ -24,23 +30,17 @@ a:visited {
         top: 0.3rem;
     }
 
-    a,
-    a:visited {
+    a:not(.nav-item),
+    a:visited:not(.nav-item) {
         color: #fff;
         text-decoration: rgba(255 255 255 / 37%) underline;
     }
 
-    a:hover,
-    a:focus {
+    a:hover:not(.nav-item),
+    a:focus:not(.nav-item) {
         color: #fff;
         text-decoration: #fff underline;
     }
-}
-
-a:hover:not(.nav-item),
-a:focus:not(.nav-item) {
-    color: variables.$button-background-hover;
-    text-decoration: rgba(46 143 107 / 100%) underline;
 }
 
 .loading-icon img {
