--- a/src/style/pages/_story.scss
+++ b/src/style/pages/_story.scss
@@ -324,7 +324,8 @@ button.mapboxgl-popup-close-button {
             }
 
             &.tag-ski,
-            &.tag-snow_shoes {
+            &.tag-snow_shoes,
+            &.tag-ice_climbing {
                 background-color: #d6a4ff;
             }
 
