--- a/src/style/components/_feedback.scss
+++ b/src/style/components/_feedback.scss
@@ -20,7 +20,7 @@
     &.open-feedback-block {
         border-radius: variables.$border-radius-lg 0;
         border: 1px solid #636363;
-        box-shadow: 0 0 2px rgba(83 83 83 / 46%);
+        box-shadow: 0 0 2px rgb(83 83 83 / 46%);
         background: #fff;
     }
 
