--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -11,7 +11,7 @@ section.about {
 
         img {
             max-width: 100%;
-            box-shadow: 1px 2px 3px rgba(0 0 0 / 20%);
+            box-shadow: 1px 2px 3px rgb(0 0 0 / 20%);
             border-radius: 0 variables.$border-radius-lg;
         }
     }
