--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -8,7 +8,7 @@ body {
 a,
 a:visited {
     color: #2e8f6b;
-    text-decoration: rgba(46 143 107 / 37%) underline;
+    text-decoration: rgb(46 143 107 / 37%) underline;
     text-underline-position: under;
     text-underline-offset: 0; /* to have the same style on both Chrome and Firefox */
 }
@@ -16,11 +16,11 @@ a:visited {
 a:hover:not(.nav-item),
 a:focus:not(.nav-item) {
     color: variables.$button-background-hover;
-    text-decoration: rgba(46 143 107 / 100%) underline;
+    text-decoration: rgb(46 143 107 / 100%) underline;
 }
 
 .tippy-box {
-    box-shadow: 2px 2px 3px rgba(51 51 51 / 46%);
+    box-shadow: 2px 2px 3px rgb(51 51 51 / 46%);
 
     &[data-placement^="top"]:not([data-theme~="abbr"]) {
         bottom: 0.3rem;
@@ -33,7 +33,7 @@ a:focus:not(.nav-item) {
     a:not(.nav-item),
     a:visited:not(.nav-item) {
         color: inherit;
-        text-decoration: rgba(255 255 255 / 37%) underline;
+        text-decoration: rgb(255 255 255 / 37%) underline;
     }
 
     a:hover:not(.nav-item),
