--- a/src/style/pages/_stories.scss
+++ b/src/style/pages/_stories.scss
@@ -9,7 +9,7 @@
     margin-inline: auto;
     width: fit-content;
     background-color: variables.$nav-bg-color;
-    box-shadow: 1px 1px 3px rgba(51 51 51 / 46%);
+    box-shadow: 1px 1px 3px rgb(51 51 51 / 46%);
     padding: 0.3rem 0.6rem;
     border-radius: variables.$border-radius-lg;
 }
@@ -46,7 +46,7 @@ form.activity-selector {
 
         img {
             border-radius: 0 variables.$border-radius-lg;
-            box-shadow: 1px 2px 3px rgba(0 0 0 / 20%);
+            box-shadow: 1px 2px 3px rgb(0 0 0 / 20%);
 
             /* Only thumbnails are faded-in because animations on large images are not really smooth. */
             animation: fade-in 0.3s ease;
@@ -80,7 +80,7 @@ form.activity-selector {
             left: 0;
             width: 100%;
             height: calc(#{variables.$global-font-size} * 4);
-            background: linear-gradient(to bottom, rgba(0 0 0 / 0%) 0%, rgba(255 255 255 / 100%) 100%);
+            background: linear-gradient(to bottom, rgb(0 0 0 / 0%) 0%, rgb(255 255 255 / 100%) 100%);
         }
     }
 
