--- a/src/style/pages/_story.scss
+++ b/src/style/pages/_story.scss
@@ -63,7 +63,7 @@ $cluster-thumbnail-small-height: 150px;
 
             img.cluster-thumbnail {
                 border-radius: 0 variables.$border-radius-lg;
-                box-shadow: 1px 2px 3px rgba(0 0 0 / 20%);
+                box-shadow: 1px 2px 3px rgb(0 0 0 / 20%);
                 margin: calc(0.5rem - 1px);
 
                 @media (width <= 500px), (orientation: portrait) {
@@ -122,7 +122,7 @@ section.story {
             /* Override Mapbox default font. */
             font-family: inherit;
             border-radius: 0 variables.$border-radius-lg;
-            box-shadow: 0 0 3px rgba(114 114 114 / 46%);
+            box-shadow: 0 0 3px rgb(114 114 114 / 46%);
             width: 100%;
 
             /* the map does not load if too small, the minimum should still fit all buttons */
@@ -230,7 +230,7 @@ section.story {
             margin: 0.5rem;
             max-height: min(calc(100% - 0.5rem * 2 - 2rem), 50vh);
             min-height: calc(200px + 0.5rem * 3);
-            box-shadow: 1px 2px 3px rgba(0 0 0 / 20%);
+            box-shadow: 1px 2px 3px rgb(0 0 0 / 20%);
             min-width: calc(300px + 0.5rem * 2);
             background: #fff;
             overflow-y: auto;
