--- a/src/style/pages/_story.scss
+++ b/src/style/pages/_story.scss
@@ -319,6 +319,7 @@ button.mapboxgl-popup-close-button {
             }
 
             &.tag-packraft,
+            &.tag-kayak,
             &.tag-sailing_boat {
                 background-color: #55cfea;
             }
