--- a/src/style/pages/_story.scss
+++ b/src/style/pages/_story.scss
@@ -43,6 +43,10 @@ $cluster-thumbnail-small-height: 150px;
             background-image: url("../icons/open-outline.svg");
         }
     }
+
+    h2 {
+        margin-top: 1rem;
+    }
 }
 
 .cluster-content,
